* finished Issue 126: Russian translation for redmine_dmsf_0.9.2
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@208 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/config/locales/ru.yml
+++ b/redmine_dmsf/config/locales/ru.yml
@@ -1,164 +1,170 @@
 ru:
-  :dmsf: "DMSF"
-  :label_dmsf_file_plural: "Dmsf files"
-  :warning_no_entries_selected: "No entries selected"
-  :error_email_to_must_be_entered: "Email To must be entered"
-  :notice_email_sent: "Email sent"
-  :warning_file_already_locked: "File already locked"
-  :notice_file_locked: "File locked"
-  :warning_file_not_locked: "File not locked"
-  :notice_file_unlocked: "File unlocked"
-  :error_only_user_that_locked_file_can_unlock_it: "Only user that locked file can unlock it"
-  :question_do_you_really_want_to_delete_this_entry: "Do you really want to delete this entry?"
-  :error_max_files_exceeded: "Limit for %{number} simultaneously downloaded files exceeded"
-  :question_do_you_really_want_to_delete_this_revision: "Do you really want to delete this revision?"
-  :error_entry_project_does_not_match_current_project: "Entry project doesn't match current project"
-  :notice_folder_created: "Folder created"
-  :error_folder_creation_failed: "Folder creation failed"
-  :error_folder_title_must_be_entered: "Title must be entered"
-  :notice_folder_deleted: "Folder deleted"
-  :error_folder_is_not_empty: "Folder is not empty"
-  :error_folder_title_is_already_used: "Title is already used"
-  :notice_folder_details_were_saved: "Folder details were saved"
-  :error_file_is_locked: "File is locked"
-  :notice_file_deleted: "File deleted"
-  :error_at_least_one_revision_must_be_present: "At least one revision must be present"
-  :notice_revision_deleted: "Revision deleted"
-  :warning_one_of_files_locked: "One of files locked"
-  :notice_file_unlocked: "File unlocked"
-  :notice_file_revision_created: "File revision created"
-  :notice_your_preferences_were_saved: "Your preferences were saved"
-  :warning_folder_notifications_already_activated: "Folder notifications already activated"
-  :notice_folder_notifications_activated: "Folder notifications activated"
-  :warning_folder_notifications_already_deactivated: "Folder notifications already deactivated"
-  :notice_folder_notifications_deactivated: "Folder notifications deactivated"
-  :warning_file_notifications_already_activated: "File notifications already activated"
-  :notice_file_notifications_activated: "File notifications activated"
-  :warning_file_notifications_already_deactivated: "File notifications already deactivated"
-  :notice_file_notifications_deactivated: "File notifications deactivated"
-  :link_details: "%{title} details"
-  :link_edit: "Edit %{title}"
-  :submit_create: "Create"
-  :link_create_folder: "Create folder"
-  :title_check_uncheck_all_for_zip_download_or_email: "Check/Uncheck all for zip download or email"
-  :link_title: "Title"
-  :link_size: "Size"
-  :link_modified: "Modified"
-  :link_ver: "Ver."
-  :link_author: "Author"
-  :title_check_for_zip_download_or_email: "Check for Zip download or email"
-  :title_delete: "Delete"
-  :title_notifications_active_deactivate: "Notifications active: Deactivate"
-  :title_notifications_not_active_activate: "Notifications not active: Activate"
-  :title_title_version_version_download: "%{title} version %{version} download"
-  :title_locked_by_user: "Locked by %{user}"
-  :title_locked_by_you: "Locked by you"
-  :title_waiting_for_approval: "Waiting for Approval"
-  :title_approved: "Approved"
-  :title_unlock_file: "Unlock to allow changes for other members"
-  :title_lock_file: "Lock to prevent changes for other members"
-  :submit_download: "Download"
-  :title_download_checked: "Download checked in Zip archive"
+  :dmsf: "Документооборот"
+  :submit_save: "Принять"
+  :label_title: "Заголовок"
+  :label_description: "Описание"
+  :heading_new_folder: "Новый каталог"
+  :label_dmsf_file_plural: "Файлы документооборота"
+  :warning_no_entries_selected: "Элементы не выбраны"
+  :error_email_to_must_be_entered: "Email получателя не введен"
+  :notice_email_sent: "Email отправлен"
+  :warning_file_already_locked: "Файл уже заблокирован"
+  :notice_file_locked: "Файл заблокирован"
+  :warning_file_not_locked: "Файл не заблокирован"
+  :notice_file_unlocked: "Файл разблокирован"
+  :error_only_user_that_locked_file_can_unlock_it: "Только заблокировавший может разблокировать файл"
+  :question_do_you_really_want_to_delete_this_entry: "Вы действительно хотите удалить элемент?"
+  :error_max_files_exceeded: "Ограничение на количество одновременно скачиваемых файлов %{number} превышено"
+  :question_do_you_really_want_to_delete_this_revision: "Вы действительно хотите удалить эту ревизию?"
+  :error_entry_project_does_not_match_current_project: "Проект элемента не соответсвует текущему проекту"
+  :notice_folder_created: "Каталог создан"
+  :error_folder_creation_failed: "Ошибка создания каталога"
+  :error_folder_title_must_be_entered: "Пожалуйста, введите название"
+  :notice_folder_deleted: "Каталог удален"
+  :error_folder_is_not_empty: "Каталог не пуст"
+  :error_folder_title_is_already_used: "Это название уже используется"
+  :notice_folder_details_were_saved: "Подробности для каталога сохранены"
+  :error_file_is_locked: "Файл заблокирован"
+  :notice_file_deleted: "Файл удален"
+  :error_at_least_one_revision_must_be_present: "Должна существовать, минимум, одна ревизия"
+  :notice_revision_deleted: "Ревизия удалена"
+  :warning_one_of_files_locked: "Один из файлов заблокирован"
+  :notice_file_unlocked: "Файл разблокирован"
+  :notice_file_revision_created: "Ревизия файла создана"
+  :notice_your_preferences_were_saved: "Ваши настройки сохранены"
+  :warning_folder_notifications_already_activated: "Уведомления для каталога уже активированы"
+  :notice_folder_notifications_activated: "Уведомления для каталога активированы"
+  :warning_folder_notifications_already_deactivated: "Уведомления для каталога уже деактивированы"
+  :notice_folder_notifications_deactivated: "Уведомления для каталога деактивированы"
+  :warning_file_notifications_already_activated: "Уведомления для файла уже активированы"
+  :notice_file_notifications_activated: "Уведомления для файла активированы"
+  :warning_file_notifications_already_deactivated: "Уведомления для файла уже деактивированы"
+  :notice_file_notifications_deactivated: "Уведомления для файла деактивированы"
+  :link_details: "%{title} (подробности)"
+  :link_edit: "Редактировать %{title}"
+  :submit_create: "Создать"
+  :link_create_folder: "Создать каталог"
+  :title_check_uncheck_all_for_zip_download_or_email: "Отметить все\Снять все отметки для скачивания Zip-архива или отправки на Email"
+  :link_title: "Заголовок"
+  :link_size: "Размер"
+  :link_modified: "Изменен"
+  :link_ver: "Версия"
+  :link_author: "Автор"
+  :title_check_for_zip_download_or_email: "Отметить для скачиванния архива или отправки на Email"
+  :title_delete: "Удалить"
+  :title_notifications_active_deactivate: "Уведомления активны: Деактивировать"
+  :title_notifications_not_active_activate: "Уведомления неактивны: Активировать"
+  :title_title_version_version_download: "%{title} версия %{version} скачать"
+  :title_locked_by_user: "Заблокировано %{user}"
+  :title_locked_by_you: "Заблокировано Вами"
+  :title_waiting_for_approval: "Ожидает утверждения"
+  :title_approved: "Утверждено"
+  :title_unlock_file: "Разблокировать, чтобы другие могли вносить изменения"
+  :title_lock_file: "Заблокировать, чтобы другие не могли вносить изменения"
+  :submit_download: "Скачать"
+  :title_download_checked: "Скачать отмеченное в Zip-архиве"
   :submit_email: "Email"
-  :title_send_checked_by_email: "Send checked by email"
-  :link_user_preferences: "Your DMSF project preferences"
-  :heading_send_documents_by_email: "Send documents by email"
-  :label_email_from: "From"
-  :label_email_to: "To"
-  :label_email_cc: "CC"
-  :label_email_subject: "Subject"
-  :label_email_documents: "Documents"
-  :label_email_body: "Body"
-  :label_email_send: "Send"
-  :title_notifications_active: "Notifications active"
-  :label_file_size: "File size"
-  :heading_file_upload: "Upload"
-  :note_uploaded_maximum_files_at_once: "There can be uploaded maximum of %{number} files at once."
-  :note_upload_files_greater_than_two_gb: "To upload files greater than 2GB you must have 64b browser."
-  :submit_upload_files: "Upload"
-  :info_file_locked: "File locked!"
-  :label_notifications: "Notifications"
-  :select_option_default: "Default"
-  :select_option_deactivated: "Deactivated"
-  :select_option_activated: "Activated"
-  :title_save_preferences: "Save preferences"
-  :heading_revisions: "Revisions"
-  :title_download: "Download"
-  :title_delete_revision: "Delete revision"
-  :label_created: "Created"
-  :label_changed: "Changed"
-  :info_changed_by_user: "%{changed} by %{user}"
-  :label_filename: "Filename"
-  :label_version: "Version"
-  :label_workflow: "Workflow"
-  :option_workflow_waiting_for_approval: "Waiting for approval"
-  :option_workflow_approved: "Approved"
-  :option_workflow_none: "None"
+  :title_send_checked_by_email: "Отправить отмеченное по Email"
+  :link_user_preferences: "Ваши настройки Документооборота"
+  :heading_send_documents_by_email: "Отправлять документы по Email"
+  :label_email_from: "От кого"
+  :label_email_to: "Кому"
+  :label_email_cc: "Копия"
+  :label_email_subject: "Заголовок"
+  :label_email_documents: "Документы"
+  :label_email_body: "Сообщение"
+  :label_email_send: "Отправить"
+  :title_notifications_active: "Уведомления активны"
+  :label_file_size: "Размер файла"
+  :heading_file_upload: "Загрузить"
+  :note_uploaded_maximum_files_at_once: "Одновременно может быть загружено не более %{number} файлов."
+  :note_upload_files_greater_than_two_gb: "Для загрузки файлов более 2GB у Вас должен стоять 64-битный браузер."
+  :submit_upload_files: "Загрузить"
+  :info_file_locked: "Файл заблокирован!"
+  :label_notifications: "Уведомления"
+  :select_option_default: "По умолчанию"
+  :select_option_deactivated: "Деактивированы"
+  :select_option_activated: "Активированы"
+  :title_save_preferences: "Сохранить настройки"
+  :heading_revisions: "Ревизии"
+  :title_download: "Скачать"
+  :title_delete_revision: "Удалить ревизию"
+  :label_created: "Создано"
+  :label_changed: "Изменено"
+  :info_changed_by_user: "%{changed} %{user}"
+  :label_filename: "Имя файла"
+  :label_version: "Версия"
+  :label_workflow: "Этап документооборота"
+  :option_workflow_waiting_for_approval: "Ожидает утверждения"
+  :option_workflow_approved: "Утверждено"
+  :option_workflow_none: "Пусто"
   :label_mime: "Mime"
-  :label_size: "Size"
-  :label_comment: "Comment"
-  :heading_new_revision: "New Revision"
-  :option_version_same: "Same"
+  :label_size: "Размер"
+  :label_comment: "Комментарий"
+  :heading_new_revision: "Новая ревизия"
+  :option_version_same: "Та же"
   :option_version_minor: "Minor"
   :option_version_major: "Major"
-  :label_new_content: "New content"
-  :label_maximum_files_upload: "Maximum files upload"
-  :note_maximum_number_of_files_uploaded: "Limits maximum number of files uploaded at once. 0 means unlimited."
-  :label_maximum_files_download: "Maximum files download"
-  :note_maximum_number_of_files_downloaded: "Limits maximum number of files downloaded in zip or sent via email. 0 means unlimited."
-  :label_file_storage_directory: "File storage directory"
-  :label_index_database: "Index database"
-  :label_stemming_language: "Stemming Language"
-  :note_possible_values: "Possible values"
-  :note_pass_none_to_disable_stemming: "pass 'none' to disable stemming"
-  :label_stem_strategy: "Stem strategy"
-  :option_stem_none: "Stem none (default)"
-  :option_stem_some: "Stem some"
-  :option_stem_all: "Stem all"
-  :label_stemming_description: "This controls how the query parser will apply the stemming algorithm. The default value is STEM_NONE. The possible values are"
-  :note_do_not_stem: "Don't perform any stemming."
-  :note_stem_some: "Search for stemmed forms of terms except for those which start with a capital letter, or are followed by certain characters, or are used with operators which need positional information. Stemmed terms are prefixed with 'Z'."
+  :label_new_content: "Новое содержание"
+  :label_maximum_files_upload: "Максимальное количество файлов для загрузки"
+  :note_maximum_number_of_files_uploaded: "Ограничение на одновременную закачку. 0 - без ограничений."
+  :label_maximum_files_download: "Максимальное количество файлов для скачивания"
+  :note_maximum_number_of_files_downloaded: "Ограничение на одновременное получение фалов в Zip-архиве или по Email. 0 - без ограничений."
+  :label_file_storage_directory: "Каталог хранилища на сервере"
+  :label_index_database: "Каталог на сервере для индексной БД"
+  :label_stemming_language: "Язык морфологического поиска"
+  :note_possible_values: "Возможные значения"
+  :note_pass_none_to_disable_stemming: "напишите 'none' для отключения морфологического поиска"
+  :label_stem_strategy: "Стратегия морфологического поиска"
+  :option_stem_none: "Морфологический поиск выключен (по умолчанию)"
+  :option_stem_some: "Частичный морфологический поиск"
+  :option_stem_all: "Полный морфологический поиск"
+  :label_stemming_description: "Здесь задается как анализатор запросов будет применять синтаксический алгоритм. Значение по умолчанию STEM_NONE. Возможные значения"
+  :note_do_not_stem: "Не использовать морфологический поиск"
+  :note_stem_some: "Искать однокоренные слова кроме тех, которые начинаются с заглавных букв, или следующих за специальеыми символами, или использующимися с операторами, которые учитывают месторасположение. Слова для поиска предваряются буквой 'Z'."
   :note_stem_all: "Search for stemmed forms of all words (note: no 'Z' prefix is added)."
   :note_stemming_applied: "Note that the stemming algorithm is only applied to words in probabilistic fields - boolean filter terms are never stemmed."
-  :label_default_notifications: "File default notifications"
-  :heading_uploaded_files: "Uploaded Files"
-  :submit_commit: "Commit"
-  :link_documents: "Documents"
-  :permission_browse_documents: "Browse documents"
-  :permission_user_preferences: "User preferences"
-  :permission_view_dmsf_files: "View documents"
-  :permission_folder_manipulation: "Folder manipulation"
-  :permission_file_manipulation: "File manipulation"
-  :permission_file_approval: "File approval"
-  :permission_force_file_unlock: "Force file unlock"
-  :label_file: "File"
-  :field_folder: "Folder"
+  :label_default_notifications: "Уведомления о файлах по умолчанию"
+  :heading_uploaded_files: "Загруженные файлы"
+  :submit_commit: "Отправить"
+  :link_documents: "Документы"
+  :permission_browse_documents: "Список документов"
+  :permission_user_preferences: "Настроки пользователя"
+  :permission_view_dmsf_files: "Просмотр документов"
+  :permission_folder_manipulation: "Управление каталогами"
+  :permission_file_manipulation: "Управление файлами"
+  :permission_file_approval: "Утверждение файлов"
+  :permission_force_file_unlock: "Принудительная разблокировка файлов"
+  :label_file: "Файл"
+  :field_folder: "Папка"
   :error_create_cycle_in_folder_dependency: "create cycle in folder dependency"
-  :error_contains_invalid_character: "contains invalid character(s)"
-  :error_file_commit_require_uploaded_file: "File commit require uploaded file"
-  :warning_some_files_were_not_commited: "Some files were not commited due to validation errors: %{files}"
-  :error_user_has_not_right_delete_folder: "User hasn't right to delete forders"
-  :error_user_has_not_right_delete_file: "User hasn't right to delete file"
-  :notice_entries_deleted: "Entries deleted"
-  :warning_some_entries_were_not_deleted: "Some entries weren't deleted: %{entries}"
-  :question_do_you_really_want_to_delete_entries: "Do you really want to delete checked entries?"
-  :title_delete_checked: "Delete checked"
-  :title_number_of_files_in_directory: "Number of files in directory"
-  :title_filename_for_download: "Filename used for download or in Zip archive"
-  :label_number_of_folders: "Folders"
-  :label_number_of_documents: "Documents"
-  :label_zip_names_encoding: "Zip names encoding"
-  :note_zip_names_encoding_iconv: "Iconv is used for charset conversion from utf-8 to target encoding"
-  :error_file_storage_directory_does_not_exist: "File storage directory doesn't exist and can't be created"
-  :error_file_can_not_be_created: "File can't be created in storage directory"
-  :error_wrong_zip_encoding: "Wrong Zip encoding"
-  :warning_xapian_not_available: "Xapian not available"
-  :menu_dmsf: "DMSF"
-  :label_physical_file_delete: "Physical file delete"
-  :user_is_not_project_member: "You are not member of the project"
-  :heading_access_downloads_emails: "Downloads/Emails"
-  :heading_access_first: "First"
-  :heading_access_last: "Last"
-  :label_dmsf_updated: "DMSF updated"
+  :error_contains_invalid_character: "содержит один или несколько недопустимых символов"
+  :error_file_commit_require_uploaded_file: "Для применения файла требуется загруженный файл"
+  :warning_some_files_were_not_commited: "Некоторые файлы не были применены, так как содержат ошибки: %{files}"
+  :error_user_has_not_right_delete_folder: "Недостаточно прав для удаления каталогов"
+  :error_user_has_not_right_delete_file: "Недостаточно прав для удаления файла"
+  :notice_entries_deleted: "Элементы удалены"
+  :warning_some_entries_were_not_deleted: "Некоторые элементы не были удалены: %{entries}"
+  :question_do_you_really_want_to_delete_entries: "Вы действительно желаете удалить отмеченные элементы?"
+  :title_delete_checked: "Удалить отмеченное"
+  :title_number_of_files_in_directory: "Количество файлов в каталоге"
+  :title_filename_for_download: "Имя Zip-архива для скачивания"
+  :label_number_of_folders: "Каталоги"
+  :label_number_of_documents: "Документы"
+  :label_zip_names_encoding: "Кодировка имен файлов в Zip-архиве"
+  :note_zip_names_encoding_iconv: "Для перекодирования имен файлов из utf-8 в кодировку назначения применяется iconv"
+  :error_file_storage_directory_does_not_exist: "Хранилище файлов не существует и не может быть создано"
+  :error_file_can_not_be_created: "Не удается создать файл в хранилище"
+  :error_wrong_zip_encoding: "Неправильная кодировка Zip-архива"
+  :warning_xapian_not_available: "Xapian не доступен"
+  :menu_dmsf: "Документооборот"
+  :label_physical_file_delete: "Физическое удаление файлов"
+  :user_is_not_project_member: "Вы не являетесь участником проекта"
+  :heading_access_downloads_emails: "Закачки\Email-ы"
+  :heading_access_first: "Первый"
+  :heading_access_last: "Последний"
+  :label_dmsf_updated: "Модуль Документооборота обновлен"
+
+# Not translated
   :title_total_size_of_all_files: "Total size of all files under this folder"
-  
+   
