* finished Issue 124: Define project_module_dmsf & permission_view_dmsf_folders in .yml for internationalization
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@209 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/config/locales/cs.yml
+++ b/redmine_dmsf/config/locales/cs.yml
@@ -128,7 +128,7 @@ cs:
   :heading_uploaded_files: "Nahrané soubory"
   :submit_commit: "Potvrdit"
   :link_documents: "Dokumenty"
-  :permission_browse_documents: "Projcházet dokumenty"
+  :permission_view_dmsf_folders: "Procházet dokumenty"
   :permission_user_preferences: "Nastavení uživatele"
   :permission_view_dmsf_files: "Zobrazit dokumnety"
   :permission_folder_manipulation: "Přesun složky"
