* improved russian translation
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@210 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/config/locales/ru.yml
+++ b/redmine_dmsf/config/locales/ru.yml
@@ -164,7 +164,5 @@ ru:
   :heading_access_first: "Первый"
   :heading_access_last: "Последний"
   :label_dmsf_updated: "Модуль Документооборота обновлен"
-
-# Not translated
-  :title_total_size_of_all_files: "Total size of all files under this folder"
+  :title_total_size_of_all_files: "Суммарный объем файлов в каталоге"
    
