--- a/redmine_dmsf/config/locales/de.yml
+++ b/redmine_dmsf/config/locales/de.yml
@@ -166,3 +166,5 @@ de:
 
 #Not translated
   :title_total_size_of_all_files: "Total size of all files under this folder"  
+  :project_module_dmsf: "DMSF"
+  
