--- a/redmine_dmsf/config/locales/en-GB.yml
+++ b/redmine_dmsf/config/locales/en-GB.yml
@@ -161,4 +161,5 @@ en-GB:
   :heading_access_last: "Last"
   :label_dmsf_updated: "DMSF updated"
   :title_total_size_of_all_files: "Total size of all files under this folder"
+  :project_module_dmsf: "DMSF"
   
