--- a/redmine_dmsf/config/locales/en.yml
+++ b/redmine_dmsf/config/locales/en.yml
@@ -165,3 +165,5 @@ en:
   :heading_access_last: "Last"
   :label_dmsf_updated: "DMSF updated"
   :title_total_size_of_all_files: "Total size of all files under this folder"
+  :project_module_dmsf: "DMSF"
+  
