--- a/redmine_dmsf/config/locales/es.yml
+++ b/redmine_dmsf/config/locales/es.yml
@@ -164,4 +164,11 @@ es:
   :label_dmsf_updated: "DMSF updated"
   :title_total_size_of_all_files: "Total size of all files under this folder"
   :project_module_dmsf: "DMSF"
+  :warning_no_project_to_copy_file_to: "No project to copy file to"
+  :comment_copied_from: "Copied from %{source}"
+  :notice_file_copied: "File copied"
+  :notice_file_moved: "File moved"
+  :label_target_project: "Target project"
+  :label_target_folder: "Target folder"
+  :title_copy_or_move: "Copy/Move"
   
