--- a/redmine_dmsf/config/locales/zh.yml
+++ b/redmine_dmsf/config/locales/zh.yml
@@ -167,4 +167,13 @@ zh:
   :label_dmsf_updated: "DMSF updated"
   :title_total_size_of_all_files: "文件夹所有文件总大小"
   :project_module_dmsf: "文档管家"
+
+# Not translated
+  :warning_no_project_to_copy_file_to: "No project to copy file to"
+  :comment_copied_from: "Copied from %{source}"
+  :notice_file_copied: "File copied"
+  :notice_file_moved: "File moved"
+  :label_target_project: "Target project"
+  :label_target_folder: "Target folder"
+  :title_copy_or_move: "Copy/Move"
   
