--- a/redmine_dmsf/config/locales/fr.yml
+++ b/redmine_dmsf/config/locales/fr.yml
@@ -169,4 +169,5 @@ fr:
   :label_target_project: "Target project"
   :label_target_folder: "Target folder"
   :title_copy_or_move: "Copy/Move"
+  :label_dmsf_folder_plural: "Dmsf folders"
   
