--- a/redmine_dmsf/config/locales/ja.yml
+++ b/redmine_dmsf/config/locales/ja.yml
@@ -128,7 +128,7 @@ ja:
   :heading_uploaded_files: "アップロードされたファイル"
   :submit_commit: "コミット"
   :link_documents: "文書"
-  :permission_view_dmsf_folders: "文書の検索"
+  :permission_view_dmsf_folders: "文書の一覧"
   :permission_user_preferences: "ユーザ設定"
   :permission_view_dmsf_files: "文書の表示"
   :permission_folder_manipulation: "フォルダの操作"
@@ -165,13 +165,14 @@ ja:
   :heading_access_last: "最終アクセス"
   :title_total_size_of_all_files: "このフォルダにある全ファイルの合計サイズ"
   :project_module_dmsf: "DMSF"
+  :warning_no_project_to_copy_file_to: "ファイルをコピーするプロジェクトがありません"
+  :comment_copied_from: "%{source} からコピーしました"
+  :notice_file_copied: "ファイルをコピーしました"
+  :notice_file_moved: "ファイルを移動しました"
+  :label_target_project: "ターゲットプロジェクト"
+  :label_target_folder: "ターゲットフォルダ"
+  :title_copy_or_move: "コピー/移動"
 
 # Not translated
-  :warning_no_project_to_copy_file_to: "No project to copy file to"
-  :comment_copied_from: "Copied from %{source}"
-  :notice_file_copied: "File copied"
-  :notice_file_moved: "File moved"
-  :label_target_project: "Target project"
-  :label_target_folder: "Target folder"
-  :title_copy_or_move: "Copy/Move"
+  :label_dmsf_folder_plural: "Dmsf folders"
   
