--- a/redmine_dmsf/config/locales/cs.yml
+++ b/redmine_dmsf/config/locales/cs.yml
@@ -173,4 +173,5 @@ cs:
   :label_target_project: "Cílový projekt"
   :label_target_folder: "Cílový adresář"
   :title_copy_or_move: "Kopírovat/Přesunout"
+  :label_dmsf_folder_plural: "Dmsf složky"
   
