* done Issue 138: New ja.yml
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@224 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/config/locales/ja.yml
+++ b/redmine_dmsf/config/locales/ja.yml
@@ -172,7 +172,5 @@ ja:
   :label_target_project: "ターゲットプロジェクト"
   :label_target_folder: "ターゲットフォルダ"
   :title_copy_or_move: "コピー/移動"
-
-# Not translated
-  :label_dmsf_folder_plural: "Dmsf folders"
+  :label_dmsf_folder_plural: "Dmsf フォルダ"
   
