* fixed Issue 153: Losing revision history across a move
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@249 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/config/locales/ja.yml
+++ b/redmine_dmsf/config/locales/ja.yml
@@ -174,3 +174,6 @@ ja:
   :title_copy_or_move: "コピー/移動"
   :label_dmsf_folder_plural: "Dmsf フォルダ"
   
+#Not translated
+  :comment_moved_from: "Moved from %{source}"
+  
