--- a/redmine_dmsf/config/locales/cs.yml
+++ b/redmine_dmsf/config/locales/cs.yml
@@ -174,4 +174,5 @@ cs:
   :label_target_folder: "Cílový adresář"
   :title_copy_or_move: "Kopírovat/Přesunout"
   :label_dmsf_folder_plural: "Dmsf složky"
+  :comment_moved_from: "Přesunuto z %{source}"
   
