--- a/redmine_dmsf/config/locales/en.yml
+++ b/redmine_dmsf/config/locales/en.yml
@@ -175,4 +175,5 @@ en:
   :title_copy_or_move: "Copy/Move"
   :label_dmsf_folder_plural: "Dmsf folders"
   
+  :comment_moved_from: "Moved from %{source}"
   
