--- a/redmine_dmsf/config/locales/fr.yml
+++ b/redmine_dmsf/config/locales/fr.yml
@@ -170,4 +170,5 @@ fr:
   :label_target_folder: "Target folder"
   :title_copy_or_move: "Copy/Move"
   :label_dmsf_folder_plural: "Dmsf folders"
+  :comment_moved_from: "Moved from %{source}"
   
