* fixed: Issue 161: Moving a file into the same folder
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@250 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/config/locales/cs.yml
+++ b/redmine_dmsf/config/locales/cs.yml
@@ -175,4 +175,5 @@ cs:
   :title_copy_or_move: "Kopírovat/Přesunout"
   :label_dmsf_folder_plural: "Dmsf složky"
   :comment_moved_from: "Přesunuto z %{source}"
+  :error_target_folder_same: "Cílový adresář a projekt jsou stejné jako aktuální"
   
