--- a/redmine_dmsf/config/locales/ru.yml
+++ b/redmine_dmsf/config/locales/ru.yml
@@ -177,4 +177,5 @@ ru:
 
 #Not translated
   :comment_moved_from: "Moved from %{source}"
+  :error_target_folder_same: "Target folder and project are the same as current"
   
