--- a/redmine_dmsf/config/locales/zh.yml
+++ b/redmine_dmsf/config/locales/zh.yml
@@ -178,4 +178,5 @@ zh:
   :title_copy_or_move: "Copy/Move"
   :label_dmsf_folder_plural: "Dmsf folders"
   :comment_moved_from: "Moved from %{source}"
+  :error_target_folder_same: "Target folder and project are the same as current"
   
