--- a/redmine_dmsf/config/locales/en.yml
+++ b/redmine_dmsf/config/locales/en.yml
@@ -179,3 +179,7 @@ en:
   :error_file_cannot_be_moved: "File can't be moved"
   :error_file_cannot_be_copied: "File can't be copied"
   
+  :warning_no_project_to_copy_folder_to: "No project to copy folder to"
+  :title_copy: "Copy"
+  :error_folder_cannot_be_copied: "Folder can't be copied"
+  
