* preparation for release 1.2.1 * fixes in czech translations
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@261 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/config/locales/cs.yml
+++ b/redmine_dmsf/config/locales/cs.yml
@@ -130,9 +130,9 @@ cs:
   :link_documents: "Dokumenty"
   :permission_view_dmsf_folders: "Procházet dokumenty"
   :permission_user_preferences: "Nastavení uživatele"
-  :permission_view_dmsf_files: "Zobrazit dokumnety"
-  :permission_folder_manipulation: "Přesun složky"
-  :permission_file_manipulation: "Přesun souboru"
+  :permission_view_dmsf_files: "Zobrazit dokumenty"
+  :permission_folder_manipulation: "Manipulace se složkami"
+  :permission_file_manipulation: "Manipulace se soubory"
   :permission_file_approval: "Schválení souboru"
   :permission_force_file_unlock: "Vynucené odemknutí souboru"
   :label_file: "Soubor"
