* done Issue 167: Feature Patch: Maximum filesize for email downloads
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@267 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/config/locales/cs.yml
+++ b/redmine_dmsf/config/locales/cs.yml
@@ -182,4 +182,7 @@ cs:
   :title_copy: "Kopírovat"
   :error_folder_cannot_be_copied: "Složka nemůže být zkopírována"
   :notice_folder_copied: "Složka zkopírována"
+  :error_max_email_filesize_exceeded: "Přesáhli jste maximální velikost souboru, který lze poslat emailem. (%{number} MB)"
+  :note_maximum_email_filesize: "Omezí se maximální velikost souboru, který může být poslán emailem. 0 znamená neomezený. Číslo je v MB."
+  :label_maximum_email_filesize: "Maximální velikost souboru emailu"
   
