* included Issue 178: German localisation update
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@272 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/config/locales/de.yml
+++ b/redmine_dmsf/config/locales/de.yml
@@ -150,7 +150,7 @@ de:
   :title_number_of_files_in_directory: "Dateizahl in dem Ordner"
   :title_filename_for_download: "Dateiname benutzt zum Herunterladen oder ZIP-archivierung"
   :label_number_of_folders: "Order"
-  :label_number_of_documents: "Documente"
+  :label_number_of_documents: "Dokumente"
   :label_zip_names_encoding: "ZIP-namen Kodierung"
   :note_zip_names_encoding_iconv: "Iconv ist benutzt zum Charset-konversion von utf-8 in Zielkodierung"
   :error_file_storage_directory_does_not_exist: "Ordner zum Dateispeichern existiert nicht und kann nicht gebildet."
@@ -163,27 +163,26 @@ de:
   :heading_access_downloads_emails: "Herunterladene/Emails"
   :heading_access_first: "Erste"
   :heading_access_last: "Letzte"
-
-#Not translated
-  :title_total_size_of_all_files: "Total size of all files under this folder"  
+  :title_total_size_of_all_files: "Gesamtgröße aller Datein in diesem Ordner"  
   :project_module_dmsf: "DMSF"
-  :warning_no_project_to_copy_file_to: "No project to copy file to"
-  :comment_copied_from: "Copied from %{source}"
-  :notice_file_copied: "File copied"
-  :notice_file_moved: "File moved"
-  :label_target_project: "Target project"
-  :label_target_folder: "Target folder"
-  :title_copy_or_move: "Copy/Move"
-  :label_dmsf_folder_plural: "Dmsf folders"
-  :comment_moved_from: "Moved from %{source}"
-  :error_target_folder_same: "Target folder and project are the same as current"
-  :error_file_cannot_be_moved: "File can't be moved"
-  :error_file_cannot_be_copied: "File can't be copied"
-  :warning_no_project_to_copy_folder_to: "No project to copy folder to"
-  :title_copy: "Copy"
-  :error_folder_cannot_be_copied: "Folder can't be copied"
-  :notice_folder_copied: "Folder copied"
-  :error_max_email_filesize_exceeded: "You've exceeded the maximum filesize for sending via email. (%{number} MB)"
-  :note_maximum_email_filesize: "Limits maximum filesize that can be sent via email. 0 means unlimited. Number is in MB."
-  :label_maximum_email_filesize: "Maximum email attachment size"
-  
+  :warning_no_project_to_copy_file_to: "Kein Projekt für das Dateikopieren."
+  :comment_copied_from: "Kopiert aus %{source}"
+  :notice_file_copied: "Datei kopiert"
+  :notice_file_moved: "Datei verschoben"
+  :label_target_project: "Zielprojekte"
+  :label_target_folder: "Zielordner"
+  :title_copy_or_move: "Kopieren/Verschieben"
+  :label_dmsf_folder_plural: "Ordner"
+  :comment_moved_from: "Verschoben aus %{source}"
+  :error_target_folder_same: "Zielordner und Projekt sind dieselbe wie die Aktuelle."
+  :error_file_cannot_be_moved: "Die Datei kann nicht verschoben werden."
+  :error_file_cannot_be_copied: "Die Datei kann nicht kopiert werden."
+  :warning_no_project_to_copy_folder_to: "Kein Projekt für das Ordnerkopieren."
+  :title_copy: "Kopieren"
+  :error_folder_cannot_be_copied: "Der Ordner kann nicht kopiert werden."
+  :notice_folder_copied: "Ordner kopiert"
+  :error_max_email_filesize_exceeded: "Maximale Dateigröße der Anlage wurde überschritten. (%{number} MB)"
+  :note_maximum_email_filesize: "Maximale Dateigröße der Anlage. 0 bedeutet keinen Limit. Der Nummer ist in MB."
+  :label_maximum_email_filesize: "Maximale Dateigröße der Anlage"
+ 
+# Not translated 
